--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-"node_modules/" 
+node_modules/
+
+database/*.db
+
+.env
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
+
+
+.DS_Store
+Thumbs.db
+
+.vscode/
+
+coverage/
