--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-database/*.db
+*.db
+backend/database/*.db
+backend/data/*.db
 
 .env
-
+backend/.env
+frontend/.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -18,3 +23,5 @@ Thumbs.db
 .vscode/
 
 coverage/
+backend/dist/
+frontend/dist/
